Examples/CPP_GeometryKernel/Engine/engine.h



//
//		RemoveProperty                              (http://rdf.bg/gkdoc/CP64/RemoveProperty.html)
//				int64_t				rdfProperty							IN
//
//				int64_t				returns								OUT
//
//	This call is named remove property instead of a at first sight more logical name delete property as all content depending on this property is not lost per se.
//	Each properties having the removed property as a parent will now inherit ther parents of the removed property.
//	All property values in the context of an instance will become property values of the parent property, or in case no parent property is defined the values are lost.
//	The return value represents a bit set defining findings during the removal, if a clean removal with no side effects was possible the return value is 0. In all other cases 
//	the following bits represent the findings during removal:
//		bit 0:
//			0	Iunput as expected
//			1	Encountered an issue on input value, i.e. property was not recognized as property
//		bit 1:
//			0	No 'child' properties found
//			1	Properties found that had this property as a parent, they are adjusted by inheriting directly removed properties parents if present
//		bit 2:
//			0	No instances found with value restrictions for this property
//			1	Vertex does contain 3D point info
//		bit 3:
//			0	No instances found with values for this property
//			1	Vertex does contain 3D normal vector info => if set, bit 4 will also be set
//		bit 6:
//			0	Vertex does not contain first 2D texture info
//			1	Vertex does contain first 2D texture info
//		bit 7:
//			0	Vertex does not contain second 2D texture info
//			1	Vertex does contain second 2D texture info => if set, bit 6 will also be set
//
//		0	The property is not defined yet
//		1	The property is an Object Type Property
//		2	The property is an Data Type Property of type Boolean
//		3	The property is an Data Type Property of type Char
//		4	The property is an Data Type Property of type Integer
//		5	The property is an Data Type Property of type Double
//
int64_t		DECL STDC	RemoveProperty(
									int64_t				rdfProperty
								);


//
//		RemovePropertyEx                            (http://rdf.bg/gkdoc/CP64/RemovePropertyEx.html)
//				int64_t				model								IN
//				int64_t				rdfProperty							IN
//
//				int64_t				returns								OUT
//
//	This call is named remove property instead of a at first sight more logical name delete property as all content depending on this property is not lost per se.
//	Each properties having the removed property as a parent will now inherit ther parents of the removed property.
//	All property values in the context of an instance will become property values of the parent property, or in case no parent property is defined the values are lost.
//	The return value represents a bit set defining findings during the removal, if a clean removal with no side effects was possible the return value is 0. In all other cases 
//	the following bits represent the findings during removal:
//		bit 0:
//			0	Iunput as expected
//			1	Encountered an issue on input value, i.e. property was not recognized as property
//		bit 1:
//			0	No 'child' properties found
//			1	Properties found that had this property as a parent, they are adjusted by inheriting directly removed properties parents if present
//		bit 2:
//			0	No instances found with value restrictions for this property
//			1	Vertex does contain 3D point info
//		bit 3:
//			0	No instances found with values for this property
//			1	Vertex does contain 3D normal vector info => if set, bit 4 will also be set
//		bit 6:
//			0	Vertex does not contain first 2D texture info
//			1	Vertex does contain first 2D texture info
//		bit 7:
//			0	Vertex does not contain second 2D texture info
//			1	Vertex does contain second 2D texture info => if set, bit 6 will also be set
//
//		0	The property is not defined yet
//		1	The property is an Object Type Property
//		2	The property is an Data Type Property of type Boolean
//		3	The property is an Data Type Property of type Char
//		4	The property is an Data Type Property of type Integer
//		5	The property is an Data Type Property of type Double
//
//
//	This call has the same behavior as RemoveProperty, however needs to be
//	used in case properties are exchanged as a successive series of integers.
//
int64_t		DECL STDC	RemovePropertyEx(
									int64_t				model,
									int64_t				rdfProperty
								);


//
//		IsProperty                                  (http://rdf.bg/gkdoc/CP64/IsProperty.html)
//				int64_t				rdfProperty							IN
//
//				bool				returns								OUT
//
//	Returns true if the argument rdfProperty is an actual active property in an active model. It returns false in all other cases,
//	i.e. this could mean the model is already closed, the property is inactive or removed or the session is closed.
//	It could also mean it represents a handle to another Thing, for example a class, instance or model.
//
bool		DECL STDC	IsProperty(
									int64_t				rdfProperty
								);


//
//  Design Tree Instances API Calls
//

//
//		CreateInstance                              (http://rdf.bg/gkdoc/CP64/CreateInstance.html)
//				int64_t				owlClass							IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to an on the fly created instance.
//	If the owlClass input is zero or not a class handle 0 will be returned,
//
int64_t		DECL STDC	CreateInstance(
									int64_t				owlClass,
									const char			* name
								);


//
//		CreateInstanceW                             (http://rdf.bg/gkdoc/CP64/CreateInstanceW.html)
//				int64_t				owlClass							IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to an on the fly created instance.
//	If the owlClass input is zero or not a class handle 0 will be returned,
//
int64_t		DECL STDC	CreateInstanceW(
									int64_t				owlClass,
									const wchar_t		* name
								);


//
//		CreateInstanceEx                            (http://rdf.bg/gkdoc/CP64/CreateInstanceEx.html)
//				int64_t				model								IN
//				int64_t				owlClass							IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to an on the fly created instance.
//	If the owlClass input is zero or not a class handle 0 will be returned,
//
int64_t		DECL STDC	CreateInstanceEx(
									int64_t				model,
									int64_t				owlClass,
									const char			* name
								);


//
//		CreateInstanceWEx                           (http://rdf.bg/gkdoc/CP64/CreateInstanceWEx.html)
//				int64_t				model								IN
//				int64_t				owlClass							IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to an on the fly created instance.
//	If the owlClass input is zero or not a class handle 0 will be returned,
//
int64_t		DECL STDC	CreateInstanceWEx(
									int64_t				model,
									int64_t				owlClass,
									const wchar_t		* name
								);


//
//		GetInstancesByIterator                      (http://rdf.bg/gkdoc/CP64/GetInstancesByIterator.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to an instance.
//	If input instance is zero, the handle will point to the first relevant instance.
//	If all instances are past (or no relevant instances are found), the function will return 0.
//
int64_t		DECL STDC	GetInstancesByIterator(
									int64_t				model,
									int64_t				owlInstance
								);


//
//		GetInstanceClass                            (http://rdf.bg/gkdoc/CP64/GetInstanceClass.html)
//				int64_t				owlInstance							IN
//
//				int64_t				returns								OUT
//
//	Returns the handle to the class of which an instances is instantiated.
//
//	Note: internally this function is not rich enough as support for multiple inheritance
//		  is making it impossible to answer this request with always one class handle.
//		  Even in the case of pure single inheritance an instance of a class is also an instance of 
//		  every parent classes in the inheritance tree. For now we expect single inheritance use
//		  and the returned class handle points to the 'lowest' class in the inheritance tree.
//
int64_t		DECL STDC	GetInstanceClass(
									int64_t				owlInstance
								);


//
//		GetInstanceClassEx                          (http://rdf.bg/gkdoc/CP64/GetInstanceClassEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//
//				int64_t				returns								OUT
//
//
int64_t		DECL STDC	GetInstanceClassEx(
									int64_t				model,
									int64_t				owlInstance
								);


//
//		GetInstancePropertyByIterator               (http://rdf.bg/gkdoc/CP64/GetInstancePropertyByIterator.html)
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to the objectTypeProperty or dataTypeProperty connected to
//	the instance, this property can also contain a value, but for example also
//	the knowledge about cardinality restrictions in the context of this instance's class
//	and the exact cardinality in context of its instance.
//
int64_t		DECL STDC	GetInstancePropertyByIterator(
									int64_t				owlInstance,
									int64_t				rdfProperty
								);


//
//		GetInstancePropertyByIteratorEx             (http://rdf.bg/gkdoc/CP64/GetInstancePropertyByIteratorEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//
//				int64_t				returns								OUT
//
//
int64_t		DECL STDC	GetInstancePropertyByIteratorEx(
									int64_t				model,
									int64_t				owlInstance,
									int64_t				rdfProperty
								);


//
//		GetInstanceInverseReferencesByIterator      (http://rdf.bg/gkdoc/CP64/GetInstanceInverseReferencesByIterator.html)
//				int64_t				owlInstance							IN
//				int64_t				referencingOwlInstance				IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to the owlInstances refering this instance
//
int64_t		DECL STDC	GetInstanceInverseReferencesByIterator(
									int64_t				owlInstance,
									int64_t				referencingOwlInstance
								);


//
//		GetInstanceReferencesByIterator             (http://rdf.bg/gkdoc/CP64/GetInstanceReferencesByIterator.html)
//				int64_t				owlInstance							IN
//				int64_t				referencedOwlInstance				IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to the owlInstance refered by this instance
//
int64_t		DECL STDC	GetInstanceReferencesByIterator(
									int64_t				owlInstance,
									int64_t				referencedOwlInstance
								);


//
//		SetNameOfInstance                           (http://rdf.bg/gkdoc/CP64/SetNameOfInstance.html)
//				int64_t				owlInstance							IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the instance, if no error it returns 0.
//	In case instance does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfInstance(
									int64_t				owlInstance,
									const char			* name
								);


//
//		SetNameOfInstanceW                          (http://rdf.bg/gkdoc/CP64/SetNameOfInstanceW.html)
//				int64_t				owlInstance							IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the instance, if no error it returns 0.
//	In case instance does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfInstanceW(
									int64_t				owlInstance,
									const wchar_t		* name
								);


//
//		SetNameOfInstanceEx                         (http://rdf.bg/gkdoc/CP64/SetNameOfInstanceEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the instance, if no error it returns 0.
//	In case instance does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfInstanceEx(
									int64_t				model,
									int64_t				owlInstance,
									const char			* name
								);


//
//		SetNameOfInstanceWEx                        (http://rdf.bg/gkdoc/CP64/SetNameOfInstanceWEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the instance, if no error it returns 0.
//	In case instance does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfInstanceWEx(
									int64_t				model,
									int64_t				owlInstance,
									const wchar_t		* name
								);


//
//		GetNameOfInstance                           (http://rdf.bg/gkdoc/CP64/GetNameOfInstance.html)
//				int64_t				owlInstance							IN
//				char				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the instance, if the instance does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfInstance(
									int64_t				owlInstance,
									char				** name
								);


//
//		GetNameOfInstanceW                          (http://rdf.bg/gkdoc/CP64/GetNameOfInstanceW.html)
//				int64_t				owlInstance							IN
//				wchar_t				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the instance, if the instance does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfInstanceW(
									int64_t				owlInstance,
									wchar_t				** name
								);