engine.cs


		//
		//		RemovePropertyEx                            (http://rdf.bg/gkdoc/CS64/RemovePropertyEx.html)
		//
		//	This call is named remove property instead of a at first sight more logical name delete property as all content depending on this property is not lost per se.
		//	Each properties having the removed property as a parent will now inherit ther parents of the removed property.
		//	All property values in the context of an instance will become property values of the parent property, or in case no parent property is defined the values are lost.
		//	The return value represents a bit set defining findings during the removal, if a clean removal with no side effects was possible the return value is 0. In all other cases 
		//	the following bits represent the findings during removal:
		//		bit 0:
		//			0	Iunput as expected
		//			1	Encountered an issue on input value, i.e. property was not recognized as property
		//		bit 1:
		//			0	No 'child' properties found
		//			1	Properties found that had this property as a parent, they are adjusted by inheriting directly removed properties parents if present
		//		bit 2:
		//			0	No instances found with value restrictions for this property
		//			1	Vertex does contain 3D point info
		//		bit 3:
		//			0	No instances found with values for this property
		//			1	Vertex does contain 3D normal vector info => if set, bit 4 will also be set
		//		bit 6:
		//			0	Vertex does not contain first 2D texture info
		//			1	Vertex does contain first 2D texture info
		//		bit 7:
		//			0	Vertex does not contain second 2D texture info
		//			1	Vertex does contain second 2D texture info => if set, bit 6 will also be set
		//
		//		0	The property is not defined yet
		//		1	The property is an Object Type Property
		//		2	The property is an Data Type Property of type Boolean
		//		3	The property is an Data Type Property of type Char
		//		4	The property is an Data Type Property of type Integer
		//		5	The property is an Data Type Property of type Double
		//
		//
		//	This call has the same behavior as RemoveProperty, however needs to be
		//	used in case properties are exchanged as a successive series of integers.
		//
        [DllImport(EngineDLL, EntryPoint = "RemovePropertyEx")]
        public static extern Int64 RemovePropertyEx(Int64 model, Int64 rdfProperty);

		//
		//		IsProperty                                  (http://rdf.bg/gkdoc/CS64/IsProperty.html)
		//
		//	Returns true if the argument rdfProperty is an actual active property in an active model. It returns false in all other cases,
		//	i.e. this could mean the model is already closed, the property is inactive or removed or the session is closed.
		//	It could also mean it represents a handle to another Thing, for example a class, instance or model.
		//
        [DllImport(EngineDLL, EntryPoint = "IsProperty")]
        public static extern byte IsProperty(Int64 rdfProperty);

        //
        //  Design Tree Instances API Calls
        //

		//
		//		CreateInstance                              (http://rdf.bg/gkdoc/CS64/CreateInstance.html)
		//
		//	Returns a handle to an on the fly created instance.
		//	If the owlClass input is zero or not a class handle 0 will be returned,
		//
        [DllImport(EngineDLL, EntryPoint = "CreateInstance")]
        public static extern Int64 CreateInstance(Int64 owlClass, string name);

        [DllImport(EngineDLL, EntryPoint = "CreateInstance")]
        public static extern Int64 CreateInstance(Int64 owlClass, byte[] name);

		//
		//		CreateInstanceW                             (http://rdf.bg/gkdoc/CS64/CreateInstanceW.html)
		//
		//	Returns a handle to an on the fly created instance.
		//	If the owlClass input is zero or not a class handle 0 will be returned,
		//
        [DllImport(EngineDLL, EntryPoint = "CreateInstanceW")]
        public static extern Int64 CreateInstanceW(Int64 owlClass, string name);

        [DllImport(EngineDLL, EntryPoint = "CreateInstanceW")]
        public static extern Int64 CreateInstanceW(Int64 owlClass, byte[] name);

		//
		//		CreateInstanceEx                            (http://rdf.bg/gkdoc/CS64/CreateInstanceEx.html)
		//
		//	Returns a handle to an on the fly created instance.
		//	If the owlClass input is zero or not a class handle 0 will be returned,
		//
        [DllImport(EngineDLL, EntryPoint = "CreateInstanceEx")]
        public static extern Int64 CreateInstanceEx(Int64 model, Int64 owlClass, string name);

        [DllImport(EngineDLL, EntryPoint = "CreateInstanceEx")]
        public static extern Int64 CreateInstanceEx(Int64 model, Int64 owlClass, byte[] name);

		//
		//		CreateInstanceWEx                           (http://rdf.bg/gkdoc/CS64/CreateInstanceWEx.html)
		//
		//	Returns a handle to an on the fly created instance.
		//	If the owlClass input is zero or not a class handle 0 will be returned,
		//
        [DllImport(EngineDLL, EntryPoint = "CreateInstanceWEx")]
        public static extern Int64 CreateInstanceWEx(Int64 model, Int64 owlClass, string name);

        [DllImport(EngineDLL, EntryPoint = "CreateInstanceWEx")]
        public static extern Int64 CreateInstanceWEx(Int64 model, Int64 owlClass, byte[] name);

		//
		//		GetInstancesByIterator                      (http://rdf.bg/gkdoc/CS64/GetInstancesByIterator.html)
		//
		//	Returns a handle to an instance.
		//	If input instance is zero, the handle will point to the first relevant instance.
		//	If all instances are past (or no relevant instances are found), the function will return 0.
		//
        [DllImport(EngineDLL, EntryPoint = "GetInstancesByIterator")]
        public static extern Int64 GetInstancesByIterator(Int64 model, Int64 owlInstance);

		//
		//		GetInstanceClass                            (http://rdf.bg/gkdoc/CS64/GetInstanceClass.html)
		//
		//	Returns the handle to the class of which an instances is instantiated.
		//
		//	Note: internally this function is not rich enough as support for multiple inheritance
		//		  is making it impossible to answer this request with always one class handle.
		//		  Even in the case of pure single inheritance an instance of a class is also an instance of 
		//		  every parent classes in the inheritance tree. For now we expect single inheritance use
		//		  and the returned class handle points to the 'lowest' class in the inheritance tree.
		//
        [DllImport(EngineDLL, EntryPoint = "GetInstanceClass")]
        public static extern Int64 GetInstanceClass(Int64 owlInstance);

		//
		//		GetInstanceClassEx                          (http://rdf.bg/gkdoc/CS64/GetInstanceClassEx.html)
		//
		//
        [DllImport(EngineDLL, EntryPoint = "GetInstanceClassEx")]
        public static extern Int64 GetInstanceClassEx(Int64 model, Int64 owlInstance);

		//
		//		GetInstancePropertyByIterator               (http://rdf.bg/gkdoc/CS64/GetInstancePropertyByIterator.html)
		//
		//	Returns a handle to the objectTypeProperty or dataTypeProperty connected to
		//	the instance, this property can also contain a value, but for example also
		//	the knowledge about cardinality restrictions in the context of this instance's class
		//	and the exact cardinality in context of its instance.
		//
        [DllImport(EngineDLL, EntryPoint = "GetInstancePropertyByIterator")]
        public static extern Int64 GetInstancePropertyByIterator(Int64 owlInstance, Int64 rdfProperty);

		//
		//		GetInstancePropertyByIteratorEx             (http://rdf.bg/gkdoc/CS64/GetInstancePropertyByIteratorEx.html)
		//
		//
        [DllImport(EngineDLL, EntryPoint = "GetInstancePropertyByIteratorEx")]
        public static extern Int64 GetInstancePropertyByIteratorEx(Int64 model, Int64 owlInstance, Int64 rdfProperty);

		//
		//		GetInstanceInverseReferencesByIterator      (http://rdf.bg/gkdoc/CS64/GetInstanceInverseReferencesByIterator.html)
		//
		//	Returns a handle to the owlInstances refering this instance
		//
        [DllImport(EngineDLL, EntryPoint = "GetInstanceInverseReferencesByIterator")]
        public static extern Int64 GetInstanceInverseReferencesByIterator(Int64 owlInstance, Int64 referencingOwlInstance);

		//
		//		GetInstanceReferencesByIterator             (http://rdf.bg/gkdoc/CS64/GetInstanceReferencesByIterator.html)
		//
		//	Returns a handle to the owlInstance refered by this instance
		//
        [DllImport(EngineDLL, EntryPoint = "GetInstanceReferencesByIterator")]
        public static extern Int64 GetInstanceReferencesByIterator(Int64 owlInstance, Int64 referencedOwlInstance);

		//
		//		SetNameOfInstance                           (http://rdf.bg/gkdoc/CS64/SetNameOfInstance.html)
		//
		//	Sets/updates the name of the instance, if no error it returns 0.
		//	In case instance does not exist it returns 1, when name cannot be updated 2.
		//
        [DllImport(EngineDLL, EntryPoint = "SetNameOfInstance")]
        public static extern Int64 SetNameOfInstance(Int64 owlInstance, string name);

        [DllImport(EngineDLL, EntryPoint = "SetNameOfInstance")]
        public static extern Int64 SetNameOfInstance(Int64 owlInstance, byte[] name);

		//
		//		SetNameOfInstanceW                          (http://rdf.bg/gkdoc/CS64/SetNameOfInstanceW.html)
		//
		//	Sets/updates the name of the instance, if no error it returns 0.
		//	In case instance does not exist it returns 1, when name cannot be updated 2.
		//
        [DllImport(EngineDLL, EntryPoint = "SetNameOfInstanceW")]
        public static extern Int64 SetNameOfInstanceW(Int64 owlInstance, string name);

        [DllImport(EngineDLL, EntryPoint = "SetNameOfInstanceW")]
        public static extern Int64 SetNameOfInstanceW(Int64 owlInstance, byte[] name);

		//
		//		SetNameOfInstanceEx                         (http://rdf.bg/gkdoc/CS64/SetNameOfInstanceEx.html)
		//
		//	Sets/updates the name of the instance, if no error it returns 0.
		//	In case instance does not exist it returns 1, when name cannot be updated 2.
		//
        [DllImport(EngineDLL, EntryPoint = "SetNameOfInstanceEx")]
        public static extern Int64 SetNameOfInstanceEx(Int64 model, Int64 owlInstance, string name);

        [DllImport(EngineDLL, EntryPoint = "SetNameOfInstanceEx")]
        public static extern Int64 SetNameOfInstanceEx(Int64 model, Int64 owlInstance, byte[] name);

		//
		//		SetNameOfInstanceWEx                        (http://rdf.bg/gkdoc/CS64/SetNameOfInstanceWEx.html)
		//
		//	Sets/updates the name of the instance, if no error it returns 0.
		//	In case instance does not exist it returns 1, when name cannot be updated 2.
		//
        [DllImport(EngineDLL, EntryPoint = "SetNameOfInstanceWEx")]
        public static extern Int64 SetNameOfInstanceWEx(Int64 model, Int64 owlInstance, string name);

        [DllImport(EngineDLL, EntryPoint = "SetNameOfInstanceWEx")]
        public static extern Int64 SetNameOfInstanceWEx(Int64 model, Int64 owlInstance, byte[] name);

		//
		//		GetNameOfInstance                           (http://rdf.bg/gkdoc/CS64/GetNameOfInstance.html)
		//
		//	Returns the name of the instance, if the instance does not exist it returns nullptr.
		//
        [DllImport(EngineDLL, EntryPoint = "GetNameOfInstance")]
        public static extern void GetNameOfInstance(Int64 owlInstance, out IntPtr name);

		//
		//		GetNameOfInstanceW                          (http://rdf.bg/gkdoc/CS64/GetNameOfInstanceW.html)
		//
		//	Returns the name of the instance, if the instance does not exist it returns nullptr.
		//
        [DllImport(EngineDLL, EntryPoint = "GetNameOfInstanceW")]
        public static extern void GetNameOfInstanceW(Int64 owlInstance, out IntPtr name);
